--- a/package.json
+++ b/package.json
@@ -10,8 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.9.0",
-    "react-native": "0.61.5"
+    "@react-native-community/async-storage": "^1.7.1",
+    "@react-navigation/core": "^3.5.1",
+    "axios": "^0.19.1",
+    "react": "^16.9.0",
+    "react-native": "^0.61.5",
+    "react-native-config": "^0.12.0",
+    "react-native-gesture-handler": "^1.5.3",
+    "react-native-screens": "^2.0.0-alpha.23",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^2.0.15",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
@@ -21,7 +34,16 @@
     "eslint": "^6.8.0",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.4",
-    "react-test-renderer": "16.9.0"
+    "react-test-renderer": "16.9.0",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-import-resolver-babel-module": "^5.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.6.1"
   },
   "jest": {
     "preset": "react-native"
