--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.1",
+    "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/core": "^3.5.1",
     "axios": "^0.19.1",
     "react": "^16.9.0",
     "react-native": "^0.61.5",
     "react-native-config": "^0.12.0",
     "react-native-gesture-handler": "^1.5.3",
+    "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.23",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.15",
