--- a/package.json
+++ b/package.json
@@ -33,11 +33,8 @@
     "@babel/runtime": "^7.8.0",
     "@react-native-community/eslint-config": "^0.0.6",
     "babel-jest": "^24.9.0",
-    "eslint": "^6.8.0",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.56.4",
-    "react-test-renderer": "16.9.0",
     "babel-plugin-module-resolver": "^3.2.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-import-resolver-babel-module": "^5.1.0",
@@ -45,7 +42,11 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.6.1"
+    "eslint-plugin-react-hooks": "^1.6.1",
+    "jest": "^24.9.0",
+    "metro-react-native-babel-preset": "^0.58.0",
+    "react-native-dotenv": "^0.2.0",
+    "react-test-renderer": "16.9.0"
   },
   "jest": {
     "preset": "react-native"
