--- a/package.json
+++ b/package.json
@@ -7,22 +7,25 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint src/",
+    "lint-fix": "eslint src/ --fix",
+    "android-reload": "adb shell input keyevent 82 && adb shell input keyevent 66 && adb shell input keyevent 66",
+    "android-devmenu": "adb shell input keyevent 82",
+    "android-debug": "adb shell input keyevent 82 && adb shell input keyevent 61 && adb shell input keyevent 66 && adb shell input keyevent 66"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.7.1",
-    "@react-native-community/masked-view": "^0.1.6",
-    "@react-navigation/core": "^3.5.1",
-    "axios": "^0.19.1",
-    "react": "^16.9.0",
-    "react-native": "^0.61.5",
-    "react-native-config": "^0.12.0",
-    "react-native-gesture-handler": "^1.5.3",
-    "react-native-safe-area-context": "^0.6.2",
-    "react-native-screens": "^2.0.0-alpha.23",
-    "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^2.0.15",
-    "react-redux": "^7.1.3",
+    "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/core": "^5.10.0",
+    "@react-navigation/native": "^5.5.1",
+    "@react-navigation/stack": "^5.5.1",
+    "axios": "^0.19.2",
+    "react-native": "^0.62.2",
+    "react-native-config": "^1.2.1",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-safe-area-context": "^3.0.6",
+    "react-native-screens": "^2.9.0",
+    "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
@@ -30,24 +33,24 @@
     "validate.js": "^0.13.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.0",
-    "@babel/runtime": "^7.8.0",
-    "@react-native-community/eslint-config": "^0.0.6",
-    "babel-jest": "^24.9.0",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-import-resolver-babel-module": "^5.1.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.6.1",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.58.0",
+    "@babel/core": "^7.10.3",
+    "@babel/runtime": "^7.10.3",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.1.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "eslint": "^7.3.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-babel-module": "^5.1.2",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "jest": "^26.1.0",
+    "metro-react-native-babel-preset": "^0.59.0",
     "react-native-dotenv": "^0.2.0",
-    "react-test-renderer": "16.9.0"
+    "react-test-renderer": "^16.13.1"
   },
   "jest": {
     "preset": "react-native"
