--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
     "axios": "^0.19.2",
+    "axios-curlirize": "^1.3.5",
     "react": "^16.13.1",
     "react-native": "^0.62.2",
     "react-native-config": "^1.2.1",
